# gmail_forwarder

./: Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
src/: cli.rs  lib.rs  main.rs
